Added new posters

--- a/poster5/index.html
+++ b/poster5/index.html
@@ -4,79 +4,53 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Poster 4</title>
+    <title>Poster 5</title>
     <link rel="stylesheet" href="../bt/css/bootstrap.css" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="container-fluid">
-      <div class="container-fluid top-head">
-        <h1>
-          WE MISS YOU <br />
-          <span> MUMMY</span>
-        </h1>
-      </div>
-      <div class="container-fluid bel-head">
-        <h5>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
-          voluptates laborum sed autem quo iusto magni temporibus ratione
-          impedit.
-        </h5>
-      </div>
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col">
-            <div class="container-fluid">
-              <img src="./img/2.png" alt="" class="img-fluid" />
-            </div>
-            <div class="container-fluid name-section">
-              <h4>
-                PROF. DORA NXEM AKUFFO JENNIFER <br />
-                JULY 14, 1992 - JUNE 27, 2021
-              </h4>
-            </div>
+    <div class="container-fluid cc">
+      <div class="row">
+        <div class="col">
+          <div class="container-fluid img-section">
+            <!-- <img src="./img/2.png" class="img-fluid" /> -->
           </div>
-          <div class="col">
-            <div class="container-fluid">
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Quisquam, aut. Eius voluptatibus illo ad repellendus minus odio.
-                Minima beatae atque eveniet. Sed, nostrum enim sit iure
-                voluptatem in necessitatibus temporibus! Lorem ipsum dolor sit
-                amet consectetur adipisicing elit. Cumque maxime soluta minima
-                aperiam expedita beatae saepe magnam quis ipsum impedit maiores
-                eligendi debitis numquam sint tempore, nemo ipsam iste aliquid.
-              </p>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
-                sequi quasi mollitia soluta quibusdam ad est, inventore earum
-                voluptate similique nam.
-              </p>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
-                sequi quasi mollitia soluta quibusdam ad est, inventore earum
-                voluptate similique nam.
-              </p>
+          <div class="container-fluid">
+            <div class="container-fluid name-section">
+              <p>We are sad to announce the passing of</p>
+              <h1>Linda Akuffo</h1>
+              <p>July 7, 1930 <span>-</span> February 12, 2021</p>
             </div>
-            <div class="container-fluid aka">
-              <h3>
-                <span>Also known as</span> <br />
-                DORA THE AMAZON
-              </h3>
-            </div>
-            <div class="conttainer-fluid ext">
-              <p class="ext-p">
-                <span>Lorem ipsum </span> dolor sit amet consectetur adipisicing
-                elit. Qui earum aliquam ab quibusdam, sunt reprehenderit
-                quisquam.
-              </p>
+            <div class="container-fluid inv">
+              <p>ALL FRIENDS AND SYMPATHIZERS ARE CORDIALLY INVITED</p>
             </div>
           </div>
         </div>
-      </div>
-
-      <div class="container-fluid symp">
-        <p>ALL FRIENDS AND SYMPATHIZERS ARE INVITED</p>
+        <div class="col">
+          <div class="container-fluid cc-heading"><h1>Obituary</h1></div>
+          <div class="all-oth container-fluid">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+              esse cum porro eveniet corrupti reprehenderit incidunt, placeat,
+              earum ipsum dignissimos nam, excepturi labore maxime? Mollitia eum
+              totam neque quae fugiat!
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+              esse cum porro eveniet corrupti reprehenderit incidunt, placeat,
+              earum ipsum dignissimo ipsum dolor sit amet consectetur
+              adipisicing elit. Animi dolor repellendus aut iusto eum, sapiente
+              nemo optio cumque ea, adipisci sunt laborum corrupti impedit non
+              tempora. Doloribus delectus adipisci consectetur.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+              esse cum porro eveniet corrupti reprehenderit incidunt, placeat,
+              earum ipsum dignissimos nam, excepturi labore maxime? Mollitia eum
+              totam neque quae fugiat.
+            </p>
+          </div>
+        </div>
       </div>
     </div>
 
