New poster added

--- a/poster8/index.html
+++ b/poster8/index.html
@@ -10,57 +10,60 @@
   </head>
   <body>
     <div class="container-fluid cc">
-      <div class="container-fluid top-heading">
-        <h1>Gone Too Soon</h1>
-        <div class="astrodivider">
-          <div class="astrodividermask"></div>
-          <span><i>&#10038;</i></span>
+      <div class="container-fluid title"><h1>GONE TOO SOON</h1></div>
+      <div class="row">
+        <div class="col">
+          <img src="./img/4.png" class="d-img" />
         </div>
-      </div>
-      <div class="container-fluid img-container">
-
-          <div class="outer-border">
-    <div class="mid-border">
-      <div class="inner-border">
-        <img class="corner-decoration corner-left-top" src="https://i.ibb.co/4mKvK3N/corner-decoration.jpg"></img>
-        <img class="corner-decoration corner-right-top" src="https://i.ibb.co/4mKvK3N/corner-decoration.jpg"></img>
-        <img class="corner-decoration corner-right-bottom" src="https://i.ibb.co/4mKvK3N/corner-decoration.jpg"></img>
-        <img class="corner-decoration corner-left-bottom" src="https://i.ibb.co/4mKvK3N/corner-decoration.jpg"></img>
-        <img class="vertical-decoration top" src="https://i.ibb.co/JRTK9z4/horizontally-centered-vertical-decoration.png"></img>
-        <img class="vertical-decoration bottom" src="https://i.ibb.co/JRTK9z4/horizontally-centered-vertical-decoration.png"></img>
-
-<div class="img-c2">
-          <img src="./img/2.png" class="img-fluid my-img" />
-
-</div>
-      </div>
-    </div>
-  </div>
-</div>
-      <div class="container-fluid details-section">
-        <div class=" container-fluid cdivider">
-          <div class="row">
-            <div class="col c1">
-              <p>
-                KINGSLEY <br />
-                <span>EWSIE MENSAH</span>
-              </p>
-            </div>
-            <div class="col c2">
-              
-              <div class="age-container">
-                <div class="age-inner">
-                  <p>
-                    AGED: <br />
-                    <span>44</span>
-                  </p>
-                </div>
-              </div>
-            </div>
+        <div class="col">
+          <div class="container-fluid">
+            <p>
+              <span
+                >Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Voluptatum magni suscipit,</span
+              >
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa vel
+              dolor possimus. Accusamus quis fugit ratione ab laudantium alias
+              dolor aliquid earum, similique dolore minima sunt iusto
+              perspiciatis officia deleniti!
+            </p>
+          </div>
+          <div class="container-fluid name-section">
+            <p>
+              <span>George <br /></span> CHIAGOZIE AKOMAS
+            </p>
+          </div>
+          <div class="container-fluid age-section">
+            <p>Aged <span>34</span> Years</p>
+          </div>
+          <div class="container-fluid details">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta
+              molestias <span>laudantium</span> eligendi repellendus ipsa
+              dolores eum nam in, autem amet sint culpa asperiores incidunt
+              architecto vitae id alias eaque ea? Lorem ipsum dolor sit amet,
+              ccusamus <span>praesentium</span> qui earum illo, in aspernatur
+              ab? Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
+              amet perspiciatis debitis, est expedita
+              <span>voluptatum</span> nostrum recusandae atque quis earum aut
+              doloremque iusto magni eos magnam aliquid quasi
+              <span>necessitatibus</span> voluptates?
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta
+              molestias <span>laudantium</span> eligendi repellendus ipsa
+              dolores eum nam in, autem amet sint culpa asperiores incidunt fuga
+              sed autem eligendi libero, dignissimos quibusdam accusamus
+              <span>praesentium</span> qui earum illo, in aspernatur ab? Lorem
+              ipsum dolor sit amet consectetur adipisicing elit. Non amet
+              perspiciatis debitis, est expedita <span>voluptatum</span> nostrum
+              recusandae atque quis earum aut doloremque iusto magni eos magnam
+              aliquid quasi <span>necessitatibus</span> voluptates?
+            </p>
           </div>
         </div>
       </div>
-</div>
+    </div>
     <script src="../bt/js/bootstrap.js"></script>
   </body>
 </html>
