--- a/poster4/index.html
+++ b/poster4/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container-fluid cc">
       <div class="container-fluid top-head">
         <h1>
           WE MISS YOU <br />
